{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 126,
  "lineage": "f57ba8e2-4d63-acde-b758-52e4f925d080",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d71b9c978137385f",
            "domain": "vpc",
            "id": "eipalloc-0d71b9c978137385f",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-34-241-233-142.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.241.233.142",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "react-shop-shared-eu-west-1-eu-west-1a"
            },
            "tags_all": {
              "Name": "react-shop-shared-eu-west-1-eu-west-1a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:088302454178:internet-gateway/igw-0caaeb6fb45682ef2",
            "id": "igw-0caaeb6fb45682ef2",
            "owner_id": "088302454178",
            "tags": {
              "Name": "react-shop-shared-eu-west-1"
            },
            "tags_all": {
              "Name": "react-shop-shared-eu-west-1"
            },
            "vpc_id": "vpc-02d20e49f1950a3fa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d71b9c978137385f",
            "connectivity_type": "public",
            "id": "nat-0bab085378adc382c",
            "network_interface_id": "eni-0ba1f8dc7034c914c",
            "private_ip": "10.0.3.225",
            "public_ip": "34.241.233.142",
            "subnet_id": "subnet-0704258d68dc892ea",
            "tags": {
              "Name": "react-shop-shared-eu-west-1-eu-west-1a"
            },
            "tags_all": {
              "Name": "react-shop-shared-eu-west-1-eu-west-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07760c0478aa7e63e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bab085378adc382c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07760c0478aa7e63e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0caaeb6fb45682ef2",
            "id": "r-rtb-0a5cf39dd425264bf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a5cf39dd425264bf",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:088302454178:route-table/rtb-07760c0478aa7e63e",
            "id": "rtb-07760c0478aa7e63e",
            "owner_id": "088302454178",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "react-shop-shared-eu-west-1-private"
            },
            "tags_all": {
              "Name": "react-shop-shared-eu-west-1-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d20e49f1950a3fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:088302454178:route-table/rtb-0a5cf39dd425264bf",
            "id": "rtb-0a5cf39dd425264bf",
            "owner_id": "088302454178",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0caaeb6fb45682ef2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "react-shop-shared-eu-west-1-public"
            },
            "tags_all": {
              "Name": "react-shop-shared-eu-west-1-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d20e49f1950a3fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031e1596fba15ba0b",
            "route_table_id": "rtb-07760c0478aa7e63e",
            "subnet_id": "subnet-08995dcd95e1bbfab"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061268d5139b51839",
            "route_table_id": "rtb-07760c0478aa7e63e",
            "subnet_id": "subnet-08ae7d1e36333077f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da2dd4c88859fd11",
            "route_table_id": "rtb-07760c0478aa7e63e",
            "subnet_id": "subnet-012aa2576e7df70c2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acf91e6276cbfbfa",
            "route_table_id": "rtb-07760c0478aa7e63e",
            "subnet_id": "subnet-001a21c5490e5a70b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000ddcca5c52835a8",
            "route_table_id": "rtb-07760c0478aa7e63e",
            "subnet_id": "subnet-014bac4c4d73a2218"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad8274988473e7be",
            "route_table_id": "rtb-07760c0478aa7e63e",
            "subnet_id": "subnet-01cee87f4bd450144"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8a0d5d7a6659ef8",
            "route_table_id": "rtb-0a5cf39dd425264bf",
            "subnet_id": "subnet-0704258d68dc892ea"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ca627d93e855c42",
            "route_table_id": "rtb-0a5cf39dd425264bf",
            "subnet_id": "subnet-05f7b6c870dc3bf4c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052dba071bb0cec90",
            "route_table_id": "rtb-0a5cf39dd425264bf",
            "subnet_id": "subnet-08073f8b5715ceacc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:088302454178:subnet/subnet-08995dcd95e1bbfab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08995dcd95e1bbfab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "088302454178",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "react-shop-shared-eu-west-1-db-eu-west-1a"
            },
            "tags_all": {
              "Name": "react-shop-shared-eu-west-1-db-eu-west-1a"
            },
            "vpc_id": "vpc-02d20e49f1950a3fa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:088302454178:subnet/subnet-08ae7d1e36333077f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ae7d1e36333077f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "088302454178",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "react-shop-shared-eu-west-1-db-eu-west-1b"
            },
            "tags_all": {
              "Name": "react-shop-shared-eu-west-1-db-eu-west-1b"
            },
            "vpc_id": "vpc-02d20e49f1950a3fa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:088302454178:subnet/subnet-012aa2576e7df70c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012aa2576e7df70c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "088302454178",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "react-shop-shared-eu-west-1-db-eu-west-1c"
            },
            "tags_all": {
              "Name": "react-shop-shared-eu-west-1-db-eu-west-1c"
            },
            "vpc_id": "vpc-02d20e49f1950a3fa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:088302454178:subnet/subnet-001a21c5490e5a70b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001a21c5490e5a70b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "088302454178",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "react-shop-shared-eu-west-1-private-eu-west-1a"
            },
            "tags_all": {
              "Name": "react-shop-shared-eu-west-1-private-eu-west-1a"
            },
            "vpc_id": "vpc-02d20e49f1950a3fa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:088302454178:subnet/subnet-014bac4c4d73a2218",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014bac4c4d73a2218",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "088302454178",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "react-shop-shared-eu-west-1-private-eu-west-1b"
            },
            "tags_all": {
              "Name": "react-shop-shared-eu-west-1-private-eu-west-1b"
            },
            "vpc_id": "vpc-02d20e49f1950a3fa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:088302454178:subnet/subnet-01cee87f4bd450144",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01cee87f4bd450144",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "088302454178",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "react-shop-shared-eu-west-1-private-eu-west-1c"
            },
            "tags_all": {
              "Name": "react-shop-shared-eu-west-1-private-eu-west-1c"
            },
            "vpc_id": "vpc-02d20e49f1950a3fa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:088302454178:subnet/subnet-0704258d68dc892ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0704258d68dc892ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "088302454178",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "react-shop-shared-eu-west-1-public-eu-west-1a"
            },
            "tags_all": {
              "Name": "react-shop-shared-eu-west-1-public-eu-west-1a"
            },
            "vpc_id": "vpc-02d20e49f1950a3fa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:088302454178:subnet/subnet-05f7b6c870dc3bf4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f7b6c870dc3bf4c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "088302454178",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "react-shop-shared-eu-west-1-public-eu-west-1b"
            },
            "tags_all": {
              "Name": "react-shop-shared-eu-west-1-public-eu-west-1b"
            },
            "vpc_id": "vpc-02d20e49f1950a3fa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:088302454178:subnet/subnet-08073f8b5715ceacc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08073f8b5715ceacc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "088302454178",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "react-shop-shared-eu-west-1-public-eu-west-1c"
            },
            "tags_all": {
              "Name": "react-shop-shared-eu-west-1-public-eu-west-1c"
            },
            "vpc_id": "vpc-02d20e49f1950a3fa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:088302454178:vpc/vpc-02d20e49f1950a3fa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00e335ce9a3b29f04",
            "default_route_table_id": "rtb-0b225caa965edc9f5",
            "default_security_group_id": "sg-033667139d1eb4cc0",
            "dhcp_options_id": "dopt-6bf7ce0d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02d20e49f1950a3fa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b225caa965edc9f5",
            "owner_id": "088302454178",
            "tags": {
              "Name": "react-shop-shared-eu-west-1"
            },
            "tags_all": {
              "Name": "react-shop-shared-eu-west-1"
            }
          }
        }
      ]
    }
  ]
}